--- a/myshop/shop/templates/products/index.html
+++ b/myshop/shop/templates/products/index.html
@@ -13,19 +13,41 @@
     <ul class="navbar-nav mr-auto">
      
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/">All products</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Brands
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          {% for brand in brands %}
+          <a class="dropdown-item" href="{{url_for('get_brand', id = brand.id)}}">{{brand.name}}</a>
+          {% endfor %}
+          
         </div>
       </li>
+
+
+
+
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          {% for category in categories %}
+          <a class="dropdown-item" href="{{url_for('get_category', id = category.id)}}">{{category.name}}</a>
+          {% endfor %}
+          
+        </div>
+      </li>
+
+
+
+
+
+
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
@@ -44,13 +66,219 @@
 
 <div class="container">
     <div class="row">
+
+      {% if brand %}
+
+      {% for b in brand %}
+      <div class="col-md-3 mt-3">
+
+
+
+        
+        <div class="cards" style="width: 100%; background-color: rgb(227, 227, 227); border-radius: 5px;">
+          <div class="image">
+              <img src="{{url_for('static', filename='images/' + b.image_1)}}" alt="{{b.name}}" class="card-img-top">
+          </div> 
+          <div class="discounttag">
+
+            {% if b.discount > 0 %}
+                <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(255, 255, 255);  position: absolute; top: 2%;  left: 84%; background-color: rgb(254, 3, 3);">  -{{b.discount}}% </h5>
+                {% endif %}
+
+          </div>
+          
+          <div class="title">
+            <h5 class="text-center">{{b.name}}</h5>
+          </div>
+          
+          <div class="des">
+            <p class="text-center">Price ${{b.price}}</p>
+
+            
+              
+          </div>
+          
+          <button style="opacity: 0%;">></button>
+          <a href="#" class="float-left btn btn-sm btn-primary">Details</a>
+            <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
+          
+          
+
+           
+        
+          
+      </div>
+
+
+
+
+          <!----<div class="card">
+              <img src="{{url_for('static', filename='images/' + b.image_1)}}" alt="{{b.name}}" class="card-img-top" height="200">
+              <div class="card-body">
+                  {% if b.discount > 0 %}
+                  <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(255, 255, 255);  position: absolute; top: 2%;  left: 84%; background-color: rgb(254, 3, 3);">  -{{b.discount}}% </h5>
+                  {% endif %}
+                  <h5 class="text-center">{{b.name}}</h5>
+                  <p class="text-center">Price ${{b.price}}</p>
+              </div>
+              <div class="card-footer">
+
+                  <a href="#" class="float-left btn btn-sm btn-primary">Details</a>
+                  <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
+              </div>
+          </div>
+          --->
+
+      </div>
+      {% endfor %}
+
+
+      {% elif get_cat_prod %}
+      {% for get_cat in get_cat_prod %}
+
+      <div class="col-md-3 mt-3">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="cards" style="width: 100%; background-color: rgb(227, 227, 227); border-radius: 5px;">
+          <div class="image">
+              <img src="{{url_for('static', filename='images/' + get_cat.image_1)}}" alt="{{get_cat.name}}" class="card-img-top">
+          </div> 
+          <div class="discounttag">
+
+            {% if get_cat.discount > 0 %}
+                <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(255, 255, 255);  position: absolute; top: 2%;  left: 84%; background-color: rgb(254, 3, 3);">  -{{get_cat.discount}}% </h5>
+                {% endif %}
+
+          </div>
+          
+          <div class="title">
+            <h5 class="text-center">{{get_cat.name}}</h5>
+          </div>
+          
+          <div class="des">
+            <p class="text-center">Price ${{get_cat.price}}</p>
+
+            
+              
+          </div>
+          
+          <button style="opacity: 0%;">></button>
+          <a href="#" class="float-left btn btn-sm btn-primary">Details</a>
+            <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
+          
+          
+
+           
+        
+          
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+       <!---- <div class="card">
+            <img src="{{url_for('static', filename='images/' + get_cat.image_1)}}" alt="{{get_cat.name}}" class="card-img-top" height="200">
+            <div class="card-body">
+                {% if get_cat.discount > 0 %}
+                <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(255, 255, 255);  position: absolute; top: 2%;  left: 84%; background-color: rgb(254, 3, 3);">  -{{get_cat.discount}}% </h5>
+                {% endif %}
+                <h5 class="text-center">{{get_cat.name}}</h5>
+                <p class="text-center">Price ${{get_cat.price}}</p>
+            </div>
+            <div class="card-footer">
+
+                <a href="#" class="float-left btn btn-sm btn-primary">Details</a>
+                <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
+            </div>
+        </div>
+        ---->
+
+      </div>
+
+      {% endfor %}
+
+
+      {% else %}
+
+
+
+
         {% for product in products %}
         <div class="col-md-3 mt-3">
-            <div class="card">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <div class="cards" style="width: 100%; background-color: rgb(227, 227, 227); border-radius: 5px;">
+            <div class="image">
+                <img src="{{url_for('static', filename='images/' + product.image_1)}}" alt="{{product.name}}" class="card-img-top">
+            </div> 
+            <div class="discounttag">
+  
+              {% if product.discount > 0 %}
+                  <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(255, 255, 255);  position: absolute; top: 2%;  left: 84%; background-color: rgb(254, 3, 3);">  -{{product.discount}}% </h5>
+                  {% endif %}
+  
+            </div>
+            
+            <div class="title">
+              <h5 class="text-center">{{product.name}}</h5>
+            </div>
+            
+            <div class="des">
+              <p class="text-center">Price ${{product.price}}</p>
+  
+              
+                
+            </div>
+            
+            <button style="opacity: 0%;">></button>
+            <a href="#" class="float-left btn btn-sm btn-primary">Details</a>
+              <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
+            
+            
+        </div>
+  
+
+
+
+           <!---- <div class="card">
                 <img src="{{url_for('static', filename='images/' + product.image_1)}}" alt="{{product.name}}" class="card-img-top" height="200">
                 <div class="card-body">
                     {% if product.discount > 0 %}
-                    <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(247, 86, 86);  position: absolute; top: 2%;  left: 84%; background-color: rgb(234, 203, 203);">  -{{product.discount}}% </h5>
+                    <h5 style="text-shadow: 1px 1px 2px #000; color: rgb(255, 255, 255);  position: absolute; top: 2%;  left: 84%; background-color: rgb(254, 3, 3);">  -{{product.discount}}% </h5>
                     {% endif %}
                     <h5 class="text-center">{{product.name}}</h5>
                     <p class="text-center">Price ${{product.price}}</p>
@@ -61,9 +289,11 @@
                     <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
                 </div>
             </div>
+            ---->
 
         </div>
         {% endfor %}
+        {% endif %}
     </div>
 </div>
 {% endblock content %}
